# agent-me

./: .env.example  .gitattributes  .gitignore  README.md  README_CN.md  SYSTEM_PROMPT.md  install.bat  install.ps1  install.sh  start.bat  start.ps1  start.sh  stop.bat  stop.ps1  stop.sh
backend/: main.py  requirements-full.txt  requirements.txt
backend/app_config/: __init__.py  encryption.py  logging_config.py  providers.py  search_providers.py  settings.py
backend/models/: chat.py  commands.py  config.py  tasks.py  writing.py
backend/routes/: __init__.py  agent.py  browser.py  chat.py  commands.py  config_routes.py  export.py  files.py  memory.py  search.py  skills.py  tasks.py  writing.py
backend/services/: agent_loop.py  command_service.py  db_service.py  file_service.py  llm_client.py  llm_service.py  memory_service.py  search_service.py  skills_service.py  task_service.py  tool_service.py  webbridge_service.py  writing_service.py
cli/: README.md  pyproject.toml
cli/agent_me/: __init__.py  main.py
frontend/: index.html  package-lock.json  package.json  postcss.config.js  tailwind.config.js  vite.config.js
frontend/src/: App.jsx  index.css  main.jsx  store.js
frontend/src/components/chat/: ChatArea.jsx  ChatInput.jsx  MessageBubble.jsx  ModelSwitcher.jsx  WelcomeScreen.jsx
frontend/src/components/commands/: CommandPanel.jsx
frontend/src/hooks/: useChat.js  useConfig.js  useMemory.js
frontend/src/utils/: api.js
script/: install.bat  install.ps1  install.sh  start.bat  start.ps1  start.sh  stop.bat  stop.ps1  stop.sh
(+11 files in other folders)
